
<resources>
    <string name="app_name">PFT</string>
    <string name="welcome_message">Welcome to Personal Finance Tracker</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_initial_balance">Enter your initial balance</string>
    <string name="select_currency">Select your preferred currency</string>
    <string name="proceed_button">Proceed</string>
    <string name="current_balance">Current Balance</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="spending_amount">Spending Amount</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="view_reports">View Reports</string>
    <string name="settings">Settings</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_category">Category</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_notes">Notes (Optional)</string>
    <string name="insufficient_funds">You literally don\'t have that much money.</string>
    <string name="low_balance_warning">Your balance is very low, do you wanna restart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accessibility_transaction_list">List of transactions</string>
    <string name="logo">logo</string>
    <string name="add">Add</string>
    <string name="dashboard">Dashboard</string>
    <string name="reports">Reports</string>
    <string name="toggle_view">Toggle View</string>
    <string name="select_date">Select Date</string>
    <string name="transaction_amount_hint">Enter amount</string>
    <string name="transaction_notes_hint">Optional notes</string>

</resources>
