<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_piggy_bank"
        app:tint="@color/white" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_dashboard"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textColor="#263238" />

    <Button
        android:id="@+id/button_add_transaction"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="#263238" />

    <Button
        android:id="@+id/button_view_reports"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reports"
        android:textColor="#263238" />
</LinearLayout>
